objects/SGR_Opportunity_Plan_Composite_Rate__c.object
<CustomObject>
    <fields>
        <fullName>ACA_Fees__c</fullName>
        <label>ACA Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Premium__c</fullName>
        <label>Gross Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Plan_Rate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Plan Rate</label>
        <referenceTo>SGR_Opportunity_Plan_Rate__c</referenceTo>
        <relationshipLabel>Opportunity Plan Composite Rate</relationshipLabel>
        <relationshipName>Opportunity_Plan_Composite_Rate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SGR_Plan_Id__c</fullName>
        <label>SGR Plan Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharingRecordAccessUpdate__c</fullName>
        <label>SharingRecordAccessUpdate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Shared</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier_Code__c</fullName>
        <label>Tier Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EO</fullName>
                </value>
                <value>
                    <fullName>EC</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>EF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Estimated_Taxes_and_Fees__c</fullName>
        <label>Total Estimated Taxes and Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Monthly_Premium__c</fullName>
        <label>Total Monthly Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <label>Volume</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Opportunity Plan Composite Rate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity_Plan_Rate__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Opportunity Plan Composite Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Plan Composite Rate</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>